--- a/Sistema_De_Gerenciamento_De_TCC-master/Frontend/package.json
+++ b/Sistema_De_Gerenciamento_De_TCC-master/Frontend/package.json
@@ -14,7 +14,7 @@
     "lucide-react": "^0.525.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-icons": "^5.5.0",
+    "react-router": "^7.0.2",
     "react-router-dom": "^7.6.3"
   },
   "devDependencies": {
