--- a/Sistema_De_Gerenciamento_De_TCC-master/Frontend/package.json
+++ b/Sistema_De_Gerenciamento_De_TCC-master/Frontend/package.json
@@ -13,9 +13,7 @@
     "hugeicons-react": "^0.3.0",
     "lucide-react": "^0.525.0",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "react-router": "^7.0.2",
-    "react-router-dom": "^7.6.3"
+    "react-dom": "^19.1.0"
   },
   "devDependencies": {
     "@types/react": "^19.1.8",
