--- a/Backend/tsconfig.json
+++ b/Backend/tsconfig.json
@@ -109,7 +109,7 @@
     /* Completeness */
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
     "skipLibCheck": true,                                /* Skip type checking all .d.ts files. */
-    "typeRoots": ["./node_modules/@types", "./src/@types", "./src/minhaAPI/types"]
+    "typeRoots": ["./node_modules/@types", "./src/@types", "./src/api/types"], /* Specify multiple folders that act like './node_modules/@types'. */
   },
   "include": [
     "src/**/*"
