--- a/Sistema_De_Gerenciamento_De_TCC-master/Frontend/package.json
+++ b/Sistema_De_Gerenciamento_De_TCC-master/Frontend/package.json
@@ -1,4 +1,5 @@
 {
+  "name": "frontend",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -18,10 +19,10 @@
     "react-router-dom": "^7.6.3"
   },
   "devDependencies": {
+    "@eslint/js": "^9.29.0",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
-    "@types/react-router-dom": "^5.3.3",
-    "@vitejs/plugin-react": "^4.6.0",
+    "@vitejs/plugin-react": "^4.5.2",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.29.0",
     "eslint-plugin-react-hooks": "^5.2.0",
@@ -29,7 +30,7 @@
     "globals": "^16.2.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17",
-    "typescript": "^5.8.3",
+    "typescript": "~5.8.3",
     "typescript-eslint": "^8.34.1",
     "vite": "^7.0.0"
   }
