--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,14 +1,15 @@
 {
-  "devDependencies": {
-    "@types/bcrypt": "^5.0.2",
-    "@types/bcryptjs": "^2.4.6",
-    "@types/cors": "^2.8.19",
-    "@types/express": "^5.0.3",
-    "@types/jsonwebtoken": "^9.0.10",
-    "@types/node": "^24.0.10",
-    "prisma": "^6.11.0",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^5.8.3"
+  "name": "sistema-de-gerenciamento-de-tcc-backend",
+  "version": "1.0.0",
+  "description": "Backend for Sistema de Gerenciamento de TCC",
+  "license": "MIT",
+  "scripts": {
+    "dev": "ts-node src/server.ts",
+    "build": "tsc",
+    "start": "node dist/server.ts"
+  },
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
   },
   "dependencies": {
     "@prisma/client": "^6.11.1",
@@ -19,10 +20,15 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2"
   },
-  "scripts": {
-    "dev": "ts-node src/server.ts",
-    "build": "tsc",
-    "start": "node dist/server.ts",
-    "prisma": "prisma"
+  "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.3",
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/node": "^24.0.10",
+    "prisma": "^6.11.0",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.8.3"
   }
 }
