--- a/Backend/.env.example
+++ b/Backend/.env.example
@@ -1,3 +1,6 @@
+# Faça uma cópia deste arquivo e renomeie para .env
+# Preencha as variáveis de ambiente conforme necessário.
+
 DATABASE_URL=postgresql://postgres:postgres@localhost:5432/meu_banco
 PORT=3000
 NODE_ENV=development
