Ajustando arquivos do frontend

--- a/Frontend/tsconfig.app.json
+++ b/Frontend/tsconfig.app.json
@@ -23,5 +23,7 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true
   },
-  "include": ["src", "../Sistema_De_Gerenciamento_De_TCC-master/Frontend/src/Components/Button.tsx"]
+  "include": [
+    "src"
+  ]
 }
