--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -9,16 +9,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.1.1",
     "@hugeicons/react": "^1.0.5",
+    "axios": "^1.10.0",
     "clsx": "^2.1.1",
     "hugeicons-react": "^0.3.0",
     "lucide-react": "^0.525.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-hook-form": "^7.60.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.3",
     "react-toastify": "^11.0.5",
-    "tailwind-merge": "^2.6.0"
+    "tailwind-merge": "^2.6.0",
+    "zod": "^4.0.2"
   },
   "devDependencies": {
     "@types/react": "^19.1.8",
