--- a/Backend/package.json
+++ b/Backend/package.json
@@ -18,7 +18,9 @@
     "cors": "^2.8.5",
     "dotenv": "^17.0.1",
     "express": "^5.1.0",
-    "jsonwebtoken": "^9.0.2"
+    "generate": "^0.14.0",
+    "jsonwebtoken": "^9.0.2",
+    "npx": "^10.2.2"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
@@ -27,7 +29,7 @@
     "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.0.13",
-    "prisma": "^6.11.0",
+    "prisma": "^6.11.1",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.3"
