removendo dependências não usadas e adicionando novas depedencias para envio de emails

--- a/Backend/package.json
+++ b/Backend/package.json
@@ -13,14 +13,14 @@
   },
   "dependencies": {
     "@prisma/client": "^6.11.1",
+    "@sendgrid/mail": "^8.1.5",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^17.0.1",
     "express": "^5.1.0",
-    "generate": "^0.14.0",
-    "jsonwebtoken": "^9.0.2",
-    "npx": "^10.2.2"
+    "handlebars": "^4.7.8",
+    "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
