--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@hookform/resolvers": "^5.1.1",
     "@hugeicons/react": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
     "axios": "^1.10.0",
     "clsx": "^2.1.1",
     "hugeicons-react": "^0.3.0",
