--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "axios": "^1.10.0",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.23.6",
     "hugeicons-react": "^0.3.0",
     "lucide-react": "^0.525.0",
     "react": "^19.1.0",
