--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -12,6 +12,7 @@
     "@hookform/resolvers": "^5.1.1",
     "@hugeicons/react": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@tanstack/react-query": "^5.83.0",
     "axios": "^1.10.0",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.6",
