--- a/Backend/package.json
+++ b/Backend/package.json
@@ -17,6 +17,7 @@
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
+    "date-fns": "^4.1.0",
     "dotenv": "^17.0.1",
     "express": "^5.1.0",
     "handlebars": "^4.7.8",
