--- a/Backend/tsconfig.json
+++ b/Backend/tsconfig.json
@@ -114,6 +114,9 @@
       "./src/@types"
     ] /* Specify multiple folders that act like './node_modules/@types'. */
   },
-  "include": ["src", "src/@types"] /* Specify the root files or patterns to be included in the program. */,
+  "include": [
+    "src",
+    "src/@types"
+  ] /* Specify the root files or patterns to be included in the program. */
   // "exclude": ["node_modules"]
 }
