Ajustar comando de build no package.json para incluir o parâmetro -p tsconfig.json

--- a/Backend/package.json
+++ b/Backend/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "dev": "ts-node src/server.ts",
-    "build": "tsc",
+    "build": "tsc -p tsconfig.json",
     "start": "node dist/server.js"
   },
   "prisma": {
