--- a/Backend/package.json
+++ b/Backend/package.json
@@ -4,6 +4,7 @@
   "description": "Backend for Sistema de Gerenciamento de TCC",
   "license": "MIT",
   "scripts": {
+    "preinstall": "npm install --include=dev",
     "dev": "ts-node src/server.ts",
     "build": "tsc -p tsconfig.json",
     "start": "node dist/server.js"
