--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -13,8 +13,9 @@
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@tanstack/react-query": "^5.83.0",
-    "axios": "^1.10.0",
+    "axios": "^1.11.0",
     "clsx": "^2.1.1",
+    "dotenv": "^17.2.1",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.525.0",
     "react": "^19.1.0",
@@ -27,6 +28,7 @@
     "zod": "^4.0.2"
   },
   "devDependencies": {
+    "@types/dotenv": "^6.1.1",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@types/react-router-dom": "^5.3.3",
